--- a/src/main/resources/templates/board/saveForm.mustache
+++ b/src/main/resources/templates/board/saveForm.mustache
@@ -20,4 +20,12 @@
     </div>
 </div>
 
+<script>
+    async function writeBoard() {
+
+        // location.href = "/";
+        // location.reload();
+    }
+</script>
+
 {{> layout/footer}}
