--- a/src/main/resources/templates/board/saveForm.mustache
+++ b/src/main/resources/templates/board/saveForm.mustache
@@ -21,11 +21,16 @@
 </div>
 
 <script>
+    // 아래 함수 작성하기 전에,
+    // 1. button -> type button으로!!
+    // 2. input name을 id로 변경하기
     async function writeBoard() {
+        // 1. id 값 찾아서 requestBody 오브젝트에 넣기
 
-        // location.href = "/";
-        // location.reload();
+        // 2. fetch post 요청하기
+
+        // 3. 마지막에 아래 코드로 페이지 이동하기
+        location.href = "/";
     }
 </script>
-
 {{> layout/footer}}
