--- a/src/main/resources/templates/board/saveForm.mustache
+++ b/src/main/resources/templates/board/saveForm.mustache
@@ -4,7 +4,7 @@
     <div class="card">
         <div class="card-header"><b>익명 글쓰기 화면입니다</b></div>
         <div class="card-body">
-            <form action="#">
+            <form>
                 <div class="mb-3">
                     <input type="text" class="form-control" placeholder="Enter author" id="author">
                 </div>
@@ -39,7 +39,7 @@
             headers: {"Content-Type": "application/json"}
         });
         let responseBody = await response.json();
-        console.log(responseBody);
+        // console.log(responseBody);
 
         // 3. 마지막에 아래 코드로 페이지 이동하기
         location.href = "/";
